--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,15 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "tailwindcss build ./src/index.css -o ./dist/output.css --watch"
   },
   "eslintConfig": {
     "extends": [
