--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "tailwindcss build ./src/index.css -o ./dist/output.css --watch"
+    "build:css": "tailwindcss build ./src/index.css -o ./src/dist/output.css --watch"
   },
   "eslintConfig": {
     "extends": [
